--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
+  background-image: url("./images/img6.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 
