--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
+  background-image: url('./images/img6.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+ font-family: "Sofia", sans-serif;
+  font-size: 30px;
+  text-shadow: 3px 3px 3px #ababab;
 }
 
 
