--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   background-size: 100% 100%;
  font-family: "Sofia", sans-serif;
   font-size: 30px;
-  text-shadow: 3px 3px 3px #ababab;
+  #text-shadow: 3px 3px 3px #ababab;
 }
 
 
