--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   font-family: "Sofia", sans-serif;
   font-size: 30px;
   #text-shadow: 3px 3px 3px #ababab;
-  color:white;
+  #color:white;
 }
 
 h1{
