--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
+  font-size: 30px;
+  text-shadow: 3px 3px 3px #ababab;
 }
 
 main {
